--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -1,19 +1,17 @@
 doctype html
 html(lang='en')
   head        
-    base(href='/yelp-jquery/')
+    base(href='/cat-spotify/')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='viewport', content='width=device-width')     
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Raleway:400,700,400')
-    link(rel='stylesheet', href='css/normalize.css')
-    link(rel='stylesheet', href='css/skeleton.css')
-    link(rel='stylesheet', href='css/custom.css')
+    link(href="style/boostrapv3/css/bootstrap.min.css", rel="stylesheet", type="text/css")
+    link(href="style/pages/css/pages.css", rel="stylesheet", type="text/css")
 
   body
 
-    div.container
-        h1 Yelp
+    div.container-fluid
+        h1 Cat Spotify
         include navbar
 
     div#content
