Changed the navbar to have the appropriate tabs

--- a/templates/navbar.jade
+++ b/templates/navbar.jade
@@ -1,5 +1,8 @@
-a#restaurants.button Restaurants
-a#doctors.button Doctors
-a#users.button Users
-a#business.button Business
-a#search.button Search
+div.panel
+    ul.nav.nav-tabs.nav-tabs-simple
+        li
+            a#artists.button Artists
+        li
+            a#albums.button Albums
+        li
+            a#tracks.button Tracks
