--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -1,10 +1,10 @@
 doctype html
 html(lang='en')
-  head        
+  head
     base(href='/cat-spotify/')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(name='viewport', content='width=device-width')     
+    meta(name='viewport', content='width=device-width')
     link(href="style/boostrapv3/css/bootstrap.min.css", rel="stylesheet", type="text/css")
     link(href="style/pages/css/pages.css", rel="stylesheet", type="text/css")
 
@@ -20,16 +20,13 @@ html(lang='en')
 
     // third-part libraries
     script(src="http://code.jquery.com/jquery.min.js")
-    script(src="js/jade.js")  
+    script(src="js/jade.js")
     script(src="js/lodash.min.js")
 
     // our app
-    script(src="js/doctor/list.js")
-    script(src="js/doctor/view.js")    
-    script(src="js/restaurant/list.js")
-    script(src="js/restaurant/view.js")    
-    script(src="js/user/list.js")
-    script(src="js/user/view.js")
-    script(src="js/business/index.js")
-    script(src="js/search/index.js")    
+    script(src="artists/index.js")
+    script(src="albums/index.js")
+    script(src="tracks/index.js")
+
+    // main app
     script(src="js/app.js")
