--- a/contents/artists/ui.jade
+++ b/contents/artists/ui.jade
@@ -2,30 +2,14 @@ h5 Search
 .row
     .col-md-8
         .form-group.form-group-default
-            label Last Action            
-            input#last-action.form-control(type='text', required='')                
+            label Search            
+            input#search-name.form-control(type='text', required='')                
     .col-md-4                         
-        button.btn.btn-primary(onClick='bills.searchByRecentActivity($("#last-action").val())') Search
+        button.btn.btn-primary(onClick='artists.searchByName($("#search-name").val())') Search
 
 
-.row
-    .col-md-8
-        .form-group.form-group-default
-            label bill_id            
-            input#bill-id.form-control(type='text', required='')                
-    .col-md-4                         
-        button.btn.btn-primary(onClick='bills.searchByBillID($("#bill-id").val())') Search
-
-h5 Bills ID
+h5 Search Artists Name
 ul
     li
-        a(href="#" onClick='bills.searchByBillID("hr3590-111")') hr3590-111
-    li
-        a(href="#" onClick='bills.searchByBillID("s179-112")') s179-112
+        a(href="#" onClick='artists.searchByName("Tania Bowra")') Tania Bowra
 
-h5 Bills Last Action At
-ul
-    li
-        a(href="#" onClick='bills.searchByRecentActivity("2011-03-03")') 2011-03-03
-    li
-        a(href="#" onClick='bills.searchByRecentActivity("2011-05-11")') 2011-05-11
