--- a/contents/albums/ui.jade
+++ b/contents/albums/ui.jade
@@ -5,4 +5,4 @@ h5 Search
             label Title           
             input#name.form-control(type='text', required='')                
     .col-md-4                         
-        button.btn.btn-primary(onClick='album.searchByAlbum($("#name").val())') Search
+        button.btn.btn-primary(onClick='albums.searchByAlbum($("#name").val())') Search
