Added all the track lookup files

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -2,9 +2,7 @@ extends layout
 
 block content
     div.row
-        div#searchdiv 
+        div#searchdiv
     div.row
-        div.eight.columns
+        div.twelve.columns
             div#list
-        div.four.columns
-            div#details           
