--- a/contents/artists/list.jade
+++ b/contents/artists/list.jade
@@ -3,17 +3,15 @@ table.table.table-striped
     thead
         tr
             th Name
-            th Genres
+            th Genre
             th Popularity
 
     tbody
-        each artist in data
+        each artist in data.artists.items
             tr
+                td= artist.name
                 td
-                    img(width='200' src= artist.items.image[0].url)
-                    = artist.items.name
-                td 
-                    each genre in artist.items.genre
+                    each genre in artist.genres
                         = genre +','
-                td= artist.items.popularity
+                td= artist.popularity
 
