--- a/contents/artists/list.jade
+++ b/contents/artists/list.jade
@@ -9,12 +9,12 @@ table.table.table-striped
     tbody
         each artist in data.artists.items
             tr
-                td 
-                    a(href="#" onClick='tracks.findTopTen(' + artist.id + ')')
+                td
+                    a(href="#" onClick='tracks.findTopTen("' + artist.id + '")')
                         = artist.name
                 td
                     each genre in artist.genres
                         = genre +','
                 td= artist.popularity
-                
+
 
